--- a/HyperParameterTuning_DNN_.ipynb
+++ b/HyperParameterTuning_DNN_.ipynb
@@ -6,7 +6,7 @@
       "name": "HyperParameterTuning DNN .ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN3/PC2sZ0QpLtgqTYEuqSz",
+      "authorship_tag": "ABX9TyMzV1MsFek1dHX1BqFlbjlg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,8 +60,7 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense\n",
-        "from scikeras.wrappers import KerasClassifier\n",
-        "from sklearn.model_selection import RandomizedSearchCV"
+        "from scikeras.wrappers import KerasClassifier"
       ],
       "metadata": {
         "id": "kw4SNM9PfqvP"
@@ -136,6 +135,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Create the model**"
+      ],
+      "metadata": {
+        "id": "QrQlbdybp-e5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Function to create model, required for KerasClassifier\n",
@@ -183,10 +191,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Grid Search**"
+        "# **Search for Batch Size and Epochs**"
       ],
       "metadata": {
-        "id": "td-qhB3AosYN"
+        "id": "rM4rH1GeqCbv"
       }
     },
     {
@@ -235,19 +243,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Random Search**"
+        "# **Search for Optimizer**"
       ],
       "metadata": {
-        "id": "GH2hravnov1p"
+        "id": "8INok5dcqHXM"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "random = RandomizedSearchCV(model, param_grid,n_iter=9)"
+        "model = KerasClassifier(model=create_model, loss=\"binary_crossentropy\", epochs=100, batch_size=10, verbose=0)"
       ],
       "metadata": {
-        "id": "nZC8CUGonDUj"
+        "id": "eBsuYBLlqSxI"
       },
       "execution_count": null,
       "outputs": []
@@ -255,10 +263,13 @@
     {
       "cell_type": "code",
       "source": [
-        "random.fit(X,y)"
+        "# define the grid search parameters\n",
+        "optimizer = ['SGD', 'RMSprop', 'Adagrad', 'Adadelta', 'Adam', 'Adamax', 'Nadam']\n",
+        "param_grid = dict(optimizer=optimizer)\n",
+        "grid = GridSearchCV(estimator=model, param_grid=param_grid, n_jobs=-1, cv=3)"
       ],
       "metadata": {
-        "id": "uLKuZ24bnUrX"
+        "id": "RVMgwigzqVe1"
       },
       "execution_count": null,
       "outputs": []
@@ -266,14 +277,222 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Tuned Logistic Regression Parameters: {}\".format(random.best_params_))\n",
-        "print(\"Best score is {}\".format(random.best_score_))"
+        "grid_result = grid.fit(X, y)"
       ],
       "metadata": {
-        "id": "6oRVmsdNnZ7r"
+        "id": "fAYJfZwcqXks"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# summarize results\n",
+        "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+        "means = grid_result.cv_results_['mean_test_score']\n",
+        "stds = grid_result.cv_results_['std_test_score']\n",
+        "params = grid_result.cv_results_['params']\n",
+        "for mean, stdev, param in zip(means, stds, params):\n",
+        "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+      ],
+      "metadata": {
+        "id": "MgkQ8YCuqL7d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Search for Learning Rate and Momentum**"
+      ],
+      "metadata": {
+        "id": "6S_5iRk8qnOL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = KerasClassifier(model=create_model, loss=\"binary_crossentropy\", optimizer=\"Adamax\", epochs=100, batch_size=10, verbose=0)"
+      ],
+      "metadata": {
+        "id": "FmnrLq0Dq3Yk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define the grid search parameters\n",
+        "learn_rate = [0.001, 0.01, 0.1, 0.2, 0.3]\n",
+        "momentum = [0.0, 0.2, 0.4, 0.6, 0.8, 0.9]\n",
+        "param_grid = dict(optimizer__learning_rate=learn_rate, optimizer__momentum=momentum)\n",
+        "grid = GridSearchCV(estimator=model, param_grid=param_grid, n_jobs=-1, cv=3)"
+      ],
+      "metadata": {
+        "id": "311SApxlq8lN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grid_result = grid.fit(X, y)"
+      ],
+      "metadata": {
+        "id": "rxiMsg5Pq-dx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# summarize results\n",
+        "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+        "means = grid_result.cv_results_['mean_test_score']\n",
+        "stds = grid_result.cv_results_['std_test_score']\n",
+        "params = grid_result.cv_results_['params']\n",
+        "for mean, stdev, param in zip(means, stds, params):\n",
+        "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
+      ],
+      "metadata": {
+        "id": "w_TS34Ggqwg1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Search for Weight Initialization**"
+      ],
+      "metadata": {
+        "id": "G1I2vtsCrOQW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "init_mode = ['uniform', 'lecun_uniform', 'normal', 'zero', 'glorot_normal', 'glorot_uniform', 'he_normal', 'he_uniform']\n",
+        "param_grid = dict(model__init_mode=init_mode)"
+      ],
+      "metadata": {
+        "id": "HkYXJzcDrUST"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment: find the best weight initialization for the model and data**"
+      ],
+      "metadata": {
+        "id": "rmFSm7IBrV2W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "3v8_uuemrcFX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Search for Activation Function**"
+      ],
+      "metadata": {
+        "id": "NXo1pF93rl18"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "activation = ['softmax', 'softplus', 'softsign', 'relu', 'tanh', 'sigmoid', 'hard_sigmoid', 'linear']\n",
+        "param_grid = dict(model__activation=activation)"
+      ],
+      "metadata": {
+        "id": "DLBREy7XrqX2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Assignment: find the best activation function for the model and data"
+      ],
+      "metadata": {
+        "id": "Az4pjNZLrrmz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Search Dropout Regularization**"
+      ],
+      "metadata": {
+        "id": "EHzZzQR_r3Nx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weight_constraint = [1.0, 2.0, 3.0, 4.0, 5.0]\n",
+        "dropout_rate = [0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]\n",
+        "param_grid = dict(model__dropout_rate=dropout_rate, model__weight_constraint=weight_constraint)"
+      ],
+      "metadata": {
+        "id": "A-NR3k3or9ax"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Number of Neurons in Hidden Layer**"
+      ],
+      "metadata": {
+        "id": "2F7I9W-VsF6e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "neurons = [1, 5, 10, 15, 20, 25, 30]\n",
+        "param_grid = dict(model__neurons=neurons)"
+      ],
+      "metadata": {
+        "id": "3E4MFF54sGIH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Use a Sample of Your Dataset**. Because networks are slow to train, try training them on a smaller sample of your training dataset, just to get an idea of general directions of parameters rather than optimal configurations.<br>\n",
+        "\n",
+        "**Start with Coarse Grids**. Start with coarse-grained grids and zoom into finer grained grids once you can narrow the scope.<br>\n",
+        "\n",
+        "**Do not Transfer Results**. Results are generally problem specific. Try to avoid favorite configurations on each new problem that you see. It is unlikely that optimal results you discover on one problem will transfer to your next project. Instead look for broader trends like number of layers or relationships between parameters.<br>\n",
+        "\n",
+        "**Reproducibility is a Problem**. Although we set the seed for the random number generator in NumPy, the results are not 100% reproducible. There is more to reproducibility when grid searching wrapped Keras models than is presented in this post."
+      ],
+      "metadata": {
+        "id": "PkB8XldKsf_G"
+      }
     }
   ]
 }
