--- a/DecisionTrees3.ipynb
+++ b/DecisionTrees3.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOwGzCWMCd5erXizvM/o3Am",
+      "authorship_tag": "ABX9TyMMd8ounvQD0adzkvDeo6V9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "import pydotplus\n",
         "!pip install six\n",
         "from sklearn.tree import export_graphviz\n",
-        "from sklearn.externals.six import StringIO  \n",
+        "from six import StringIO\n",
         "from IPython.display import Image  "
       ],
       "execution_count": null,
