--- a/HP2 Wage_per_hour.ipynb
+++ b/HP2 Wage_per_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "Wage_per_hour.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPcLb82I3AJc7cdkLey1Zk5",
+      "authorship_tag": "ABX9TyOg9ezHua3Fd4BLBA0M1Yf6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3SQKWd5CyYaO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "3SQKWd5CyYaO"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -39,28 +37,25 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x4doZ6C0zjUH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "x4doZ6C0zjUH"
       },
       "source": [
         "# Use seaborn for pairplot\n",
         "!pip install seaborn"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3qp8aXDwUM_z",
-        "colab_type": "text"
+        "id": "3qp8aXDwUM_z"
       },
       "source": [
         "# **Can a person's hourly wage be predicted from a set of features?**\n",
@@ -73,9 +68,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rHyhWXYgzmVP",
-        "colab_type": "code",
-        "colab": {}
+        "id": "rHyhWXYgzmVP"
       },
       "source": [
         "from __future__ import absolute_import, division, print_function, unicode_literals\n",
@@ -92,6 +85,7 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
+        "\n",
         "import seaborn as sns\n",
         "\n",
         "\n",
@@ -100,29 +94,26 @@
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zXvYo7B7xqch",
-        "colab_type": "code",
-        "colab": {}
+        "id": "zXvYo7B7xqch"
       },
       "source": [
         "#read in data using pandas\n",
         "dataset = pd.read_csv(\"hourly_wages.csv\")\n",
         "#check data has been read in properly\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KKxgI6aJVU50",
-        "colab_type": "text"
+        "id": "KKxgI6aJVU50"
       },
       "source": [
         "wage_per_hour --> the label<br>\n",
@@ -132,74 +123,51 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0VeAAWJaUo76",
-        "colab_type": "code",
-        "colab": {}
+        "id": "0VeAAWJaUo76"
       },
       "source": [
         "dataset.columns"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "13h97-mb0D2w",
-        "colab_type": "code",
-        "colab": {}
+        "id": "13h97-mb0D2w"
       },
       "source": [
         "dataset.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X2CpVHrSeMfs",
-        "colab_type": "code",
-        "colab": {}
+        "id": "X2CpVHrSeMfs"
       },
       "source": [
         "dataset[\"female\"].value_counts()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G7YSOmeIlSZl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "G7YSOmeIlSZl"
       },
       "source": [
         "dataset[\"age\"].value_counts()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HSpXOewJmvTc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "corr.columns.values"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Vl2sDHdZaenT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Vl2sDHdZaenT"
       },
       "source": [
         "corr = dataset.corr()\n",
@@ -208,14 +176,24 @@
         "            yticklabels=corr.columns.values)\n",
         "plt.show()\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HSpXOewJmvTc"
+      },
+      "source": [
+        "corr.columns.values"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cRjQcCAdVBK2",
-        "colab_type": "text"
+        "id": "cRjQcCAdVBK2"
       },
       "source": [
         "# **Split the dataset into training and test sets**"
@@ -224,8 +202,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "CuPqzRxeVHSG",
-        "colab_type": "text"
+        "id": "CuPqzRxeVHSG"
       },
       "source": [
         "This is a hyperparameter that can be adjusted. <br>\n",
@@ -235,23 +212,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c_uOMdheypB2",
-        "colab_type": "code",
-        "colab": {}
+        "id": "c_uOMdheypB2"
       },
       "source": [
         "train_dataset = dataset.sample(frac=0.8,random_state=0)\n",
         "test_dataset = dataset.drop(train_dataset.index)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "h1PvLzIVVg1a",
-        "colab_type": "text"
+        "id": "h1PvLzIVVg1a"
       },
       "source": [
         "# **Separate the label from the features**"
@@ -260,9 +234,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HTigEatR0bSJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "HTigEatR0bSJ"
       },
       "source": [
         "train_stats = train_dataset.describe()\n",
@@ -270,15 +242,13 @@
         "train_stats = train_stats.transpose()\n",
         "train_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "waQ318910hxx",
-        "colab_type": "code",
-        "colab": {}
+        "id": "waQ318910hxx"
       },
       "source": [
         "test_stats = test_dataset.describe()\n",
@@ -286,29 +256,26 @@
         "test_stats = test_stats.transpose()\n",
         "test_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5sOILWDA0mff",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5sOILWDA0mff"
       },
       "source": [
         "train_labels = train_dataset.pop('wage_per_hour')\n",
         "test_labels = test_dataset.pop('wage_per_hour')\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XkB5m7bKWV15",
-        "colab_type": "text"
+        "id": "XkB5m7bKWV15"
       },
       "source": [
         "# **Normalize the data**"
@@ -317,9 +284,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-u1QKRKK0swD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-u1QKRKK0swD"
       },
       "source": [
         "def norm(x):\n",
@@ -328,14 +293,13 @@
         "normed_test_data = norm(test_dataset)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XFaQ8d8YWZei",
-        "colab_type": "text"
+        "id": "XFaQ8d8YWZei"
       },
       "source": [
         "# **Create the model**\n",
@@ -349,9 +313,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jssbPzTdyxQD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "jssbPzTdyxQD"
       },
       "source": [
         "inputs = len(train_dataset.keys())\n",
@@ -379,28 +341,25 @@
         "  return model\n",
         "  print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CGUY-cQFy2ll",
-        "colab_type": "code",
-        "colab": {}
+        "id": "CGUY-cQFy2ll"
       },
       "source": [
         "model = build_model()\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sQ2o0NssXrYV",
-        "colab_type": "text"
+        "id": "sQ2o0NssXrYV"
       },
       "source": [
         "# **Train the Model**\n",
@@ -411,9 +370,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "23k2bVx51WWN",
-        "colab_type": "code",
-        "colab": {}
+        "id": "23k2bVx51WWN"
       },
       "source": [
         "# Display training progress by printing a single dot for each completed epoch\n",
@@ -427,15 +384,13 @@
         "history = model.fit(normed_train_data, train_labels, epochs=EPOCHS,\n",
         "                    validation_split = 0.2, verbose=0, callbacks=[early_stop])\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Zd4JcKv1Ps1",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4Zd4JcKv1Ps1"
       },
       "source": [
         "def plot_history(history):\n",
@@ -456,29 +411,26 @@
         "\n",
         "plot_history(history)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YsKJDp5d20o-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YsKJDp5d20o-"
       },
       "source": [
         "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=1)\n",
         "\n",
         "print(\"Testing set Mean Abs Error: ${:5.2f} wage_per_hour\".format(mae))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "a8FsVvMyqUvb",
-        "colab_type": "text"
+        "id": "a8FsVvMyqUvb"
       },
       "source": [
         "\n",
@@ -496,41 +448,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ukb-7c0PqT_-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ukb-7c0PqT_-"
       },
       "source": [
         "from sklearn.preprocessing import KBinsDiscretizer\n",
-        "disc = KBinsDiscretizer(n_bins=3, encode='uniform', \n",
+        "disc = KBinsDiscretizer(n_bins=3, encode='onehot', \n",
         "                        strategy='uniform')\n",
-        "disc.fit_transform(X) #X is the dataset"
+        "disc.fit_transform(normed_train_data) #X is the dataset"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZrQ8Hk2nqfHd",
-        "colab_type": "text"
+        "id": "ZrQ8Hk2nqfHd"
       },
       "source": [
         "If the output doesn’t make sense to you, invoke the bin_edges_ attribute on the discretizer (disc) and take a look at how the bins are divided. Then try another strategy and see how the bin edges change accordingly."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ncxxh9xnqefC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
