--- a/HP3 boston_housing.ipynb
+++ b/HP3 boston_housing.ipynb
@@ -6,7 +6,7 @@
       "name": "boston_housing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyN0VkAdfKVq7csV66SxaV3X",
+      "authorship_tag": "ABX9TyNTb5exwBEwtXL/WXMN4Ap4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PEgIWxQuOSri",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PEgIWxQuOSri"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -38,14 +36,13 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7S0VCv_jxQ_l",
-        "colab_type": "text"
+        "id": "7S0VCv_jxQ_l"
       },
       "source": [
         "# **Can the median value (medv) Boston housing market be predicted from the given feature set?**"
@@ -54,8 +51,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jWtK6DJgwqS4",
-        "colab_type": "text"
+        "id": "jWtK6DJgwqS4"
       },
       "source": [
         "# **The dataset definitions**"
@@ -64,8 +60,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "x25DecR-OUC1",
-        "colab_type": "text"
+        "id": "x25DecR-OUC1"
       },
       "source": [
         "CRIM: This column represents per capita crime rate by town<br>\n",
@@ -87,8 +82,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "f7u0Rqnewu29",
-        "colab_type": "text"
+        "id": "f7u0Rqnewu29"
       },
       "source": [
         "# **Load the libraries**"
@@ -97,9 +91,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xbicIlT6PQ9J",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xbicIlT6PQ9J"
       },
       "source": [
         "from __future__ import absolute_import, division, print_function, unicode_literals\n",
@@ -119,20 +111,19 @@
         "import seaborn as sns\n",
         "import numpy as np\n",
         "\n",
-        "from keras.utils import to_categorical\n",
+        "from tensorflow.keras.utils import to_categorical\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vnwkfHfxw0Y2",
-        "colab_type": "text"
+        "id": "vnwkfHfxw0Y2"
       },
       "source": [
         "# **Get the data**"
@@ -141,47 +132,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g7aRouidPWSj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "g7aRouidPWSj"
       },
       "source": [
         "boston_housing_data = pd.read_csv(\"boston_housing.csv\", sep=',')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WGXpHI3VPaI-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "WGXpHI3VPaI-"
       },
       "source": [
         "boston_housing_data.tail()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gUbgLpx8tua0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "gUbgLpx8tua0"
       },
       "source": [
         "boston_housing_data.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "g0n4rhYdSLVd",
-        "colab_type": "text"
+        "id": "g0n4rhYdSLVd"
       },
       "source": [
         "Sometimes model performance can be improved by grouping (or binning) the data. \n",
@@ -192,8 +176,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sttw92mGSzRC",
-        "colab_type": "text"
+        "id": "sttw92mGSzRC"
       },
       "source": [
         "**Uncomment the code below to use binning on the column.** <br>\n",
@@ -203,9 +186,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6s6YxDUyPlkW",
-        "colab_type": "code",
-        "colab": {}
+        "id": "6s6YxDUyPlkW"
       },
       "source": [
         "#boston_housing_data['age_bin_round'] = np.array(np.floor(\n",
@@ -213,14 +194,13 @@
         "#boston_housing_data[['age_bin_round']]\n",
         "#boston_housing_data.drop(columns=['age'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Vj9QOqives_U",
-        "colab_type": "text"
+        "id": "Vj9QOqives_U"
       },
       "source": [
         "Did binning add bias to our data?<br>\n",
@@ -230,21 +210,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q9elPNxqesHf",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Q9elPNxqesHf"
       },
       "source": [
         "#boston_housing_data['age_bin_round'].value_counts()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "W6PpDLKcw4U6",
-        "colab_type": "text"
+        "id": "W6PpDLKcw4U6"
       },
       "source": [
         "# **Data Correlation**"
@@ -253,9 +230,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QTqRHefEwhDH",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QTqRHefEwhDH"
       },
       "source": [
         "corr = boston_housing_data.corr()\n",
@@ -264,14 +239,13 @@
         "            yticklabels=corr.columns.values)\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vItcoFKyz6g4",
-        "colab_type": "text"
+        "id": "vItcoFKyz6g4"
       },
       "source": [
         "# **Tune the train-test split**\n",
@@ -281,24 +255,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UrWchrJLt33i",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UrWchrJLt33i"
       },
       "source": [
         "train_dataset = boston_housing_data.sample(frac=0.5,random_state=0)\n",
         "test_dataset = boston_housing_data.drop(train_dataset.index)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AdgiTbELuDEZ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AdgiTbELuDEZ"
       },
       "source": [
         "train_stats = train_dataset.describe()\n",
@@ -306,15 +276,13 @@
         "train_stats = train_stats.transpose()\n",
         "train_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NrH-y-nXuJxq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "NrH-y-nXuJxq"
       },
       "source": [
         "test_stats = test_dataset.describe()\n",
@@ -322,29 +290,26 @@
         "test_stats = test_stats.transpose()\n",
         "test_stats"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KPjS_Dz0uMx6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "KPjS_Dz0uMx6"
       },
       "source": [
         "train_labels = train_dataset.pop('medv')\n",
         "test_labels = test_dataset.pop('medv')\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "L10Zo51Dw_e8",
-        "colab_type": "text"
+        "id": "L10Zo51Dw_e8"
       },
       "source": [
         "# **Normalize the data**"
@@ -353,9 +318,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xxtb8DXWuTx9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Xxtb8DXWuTx9"
       },
       "source": [
         "def norm(x):\n",
@@ -364,14 +327,13 @@
         "normed_test_data = norm(test_dataset)\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RbjLowGOxD7t",
-        "colab_type": "text"
+        "id": "RbjLowGOxD7t"
       },
       "source": [
         "# **The model**\n",
@@ -388,9 +350,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TEz3YQjDuYXb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TEz3YQjDuYXb"
       },
       "source": [
         "inputs = len(train_dataset.keys())\n",
@@ -413,28 +373,25 @@
         "  return model\n",
         "  print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NWWLyx8suepJ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "NWWLyx8suepJ"
       },
       "source": [
         "model = build_model()\n",
         "print(\"done\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pAI31wsWxIQU",
-        "colab_type": "text"
+        "id": "pAI31wsWxIQU"
       },
       "source": [
         "# **Train the model**<br>\n",
@@ -446,9 +403,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5mBi4HLvuhb6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5mBi4HLvuhb6"
       },
       "source": [
         "# Display training progress by printing a single dot for each completed epoch\n",
@@ -463,15 +418,13 @@
         "history = model.fit(normed_train_data, train_labels, epochs=EPOCHS,batch_size=2,\n",
         "                    validation_split = 0.2, verbose=0, callbacks=[early_stop])\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gd_ZnTCFusO7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "gd_ZnTCFusO7"
       },
       "source": [
         "def plot_history(history):\n",
@@ -502,30 +455,26 @@
         "\n",
         "plot_history(history)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ek_255KLuwyS",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ek_255KLuwyS"
       },
       "source": [
         "loss, mae, mse = model.evaluate(normed_test_data, test_labels, verbose=1)\n",
         "\n",
         "print(\"Testing set Mean Abs Error: {:5.2f} medv\".format(mae))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pAAUSVWlu2xF",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pAAUSVWlu2xF"
       },
       "source": [
         "test_predictions = model.predict(normed_test_data).flatten()\n",
@@ -540,15 +489,13 @@
         "_ = plt.plot([-100, 100], [-100, 100])\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M_AGOfmuu56H",
-        "colab_type": "code",
-        "colab": {}
+        "id": "M_AGOfmuu56H"
       },
       "source": [
         "error = test_predictions - test_labels\n",
@@ -557,7 +504,7 @@
         "_ = plt.ylabel(\"Count\")\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
